--- a/VRChat/31/1195931.html
+++ b/VRChat/31/1195931.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PX0lfbbxv2pBDNg0ITXgbyvful55fxtHejT8Pq8YESs="></script>
+    "005O0bXm/Ow4iS+ziisgzd+F9ihm8/hiJNX8wN1HHRg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[再配布可能] SFGun [無料]","description":"完全オリジナルです。\n30分ほどで適当に作ったSFっぽい銃です。\nテクスチャは10秒くらいで作ったやつです。\n\nポリゴン数：272\nマテリアル数：1\n\n修正依頼等あればTwitterまで、時間があれば対応します。\n\n他にもいろいろ配布・販売してますのでよかったら！\n\n不明点や改変依頼は連絡先からどうぞ。\n【個人利用可能】【商用利用可能】","url":"https://booth.pm/ja/items/1195931","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1195931/d897d702-10dc-479c-a2bb-c11658a83d36_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PX0lfbbxv2pBDNg0ITXgbyvful55fxtHejT8Pq8YESs="></script>
+    nonce="005O0bXm/Ow4iS+ziisgzd+F9ihm8/hiJNX8wN1HHRg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1195931/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1195931/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
