--- a/VRChat/93/1195693.html
+++ b/VRChat/93/1195693.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aEp0IpHVWeWkvQACltYFNyO7gUdDHepBUaos5Xax+10="></script>
+    "Rx96+vyLcMZISI6SbwuxPPEhVshnjd8gEWyfmlYzSWE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"XB-1 Providence","description":"ポリゴン数 528\n\nUnitypackageにしてます。\n\n商用可です。\n\n※自作発言　二次配布、販売　は禁止です。\n\n詳しい利用規約は\nhttps://totom.booth.pm/items/2117789\nにあります。","url":"https://booth.pm/ja/items/1195693","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/9d1d5f3b-a0fa-4744-b690-3bb917ff7e3c/i/1195693/3cdd36ca-e8f9-4f61-ba8c-fed5fdd9e154_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aEp0IpHVWeWkvQACltYFNyO7gUdDHepBUaos5Xax+10="></script>
+    nonce="Rx96+vyLcMZISI6SbwuxPPEhVshnjd8gEWyfmlYzSWE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1195693/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               75
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1195693/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               75
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
