--- a/VRChat/84/1195284.html
+++ b/VRChat/84/1195284.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "f228OARmhd2TOwsg2kNp8TXvgAkXn8mETy+rcBRLGpA="></script>
+    "Tk1euPonOnT0x7lc0bPCv/GduRK8TNezfdWpr5/WUI0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Chess 3D Model Data -チェスの3Dモデルデータ-","description":"チェスの盤面と駒のモデルデータです。\nLightWave3Dのモデル形式（LWO）とFBXの２種を収録しています。\n駒はレイヤーで分かれており、デフューズとスペキュラーのみで表現しています。（テクスチャは使っていません）\n４角ポリゴンのままなので、形状修正やリダクションも容易です。\n質感はメタル調ですが、お使いの3Dソフトでサンプルのように変更することもできます。\n\n＜利用規約＞\n本データの非商用・商用での使用は自由です。 \n改変も好きにしていただいて構いませんが、二次配布は禁止します。\n本データの使用に際して発生したいかなる障害について、作成者は一切の責任を負わないものとします。","url":"https://booth.pm/ja/items/1195284","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/15c658df-7e8e-4c5a-8f61-b6d15cc59c69/i/1195284/7767c536-3a36-4ee7-b0b3-f3d92a24e7f3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="f228OARmhd2TOwsg2kNp8TXvgAkXn8mETy+rcBRLGpA="></script>
+    nonce="Tk1euPonOnT0x7lc0bPCv/GduRK8TNezfdWpr5/WUI0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1195284/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1195284/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
