--- a/VRChat/65/1194865.html
+++ b/VRChat/65/1194865.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bX9gb3EDjRmTmmSNeqDjMLfuAc1ZyWUjfNR0ScdWqCo="></script>
+    "aoYoBXwEqou+gpLm+OptgHFdYk/QtWrr496sNuECFXI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】普遍的な首輪","description":"ポリゴン数　\nver1:1380\nver2:792\nFBX形式\n\n初めて作った3Dモデルです。\n大きさを調整してお使いください。\nUnityでマテリアルを作成し、お好みの色・シェーダーを適用させ赤の部分に張り付けるといいと思います。\nver2はポリゴン数減らしたやつです。\n\n商用・非商用利用、改変ご自由に。\nデータを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。","url":"https://booth.pm/ja/items/1194865","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/02349074-733a-48bd-9da0-00f441bd04a5/i/1194865/afba929e-4311-44ea-9949-d5d4b73fbf73_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bX9gb3EDjRmTmmSNeqDjMLfuAc1ZyWUjfNR0ScdWqCo="></script>
+    nonce="aoYoBXwEqou+gpLm+OptgHFdYk/QtWrr496sNuECFXI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1194865/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               316
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1194865/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               316
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
